--- a/styles.css
+++ b/styles.css
@@ -5,3 +5,147 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.container {
+    display: grid;
+    height: 100vh;
+    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-rows: 1fr 7fr 1fr;
+    gap: 15px;
+}
+
+header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 15px;
+    grid-column: 1 / 4;
+    grid-row: 1 / 2;
+}
+
+h1 {
+    font-size: 60px;
+}
+
+.pf-sign {
+    background-color: blanchedalmond;
+    border: 1px solid;
+    font-size: 20px;
+    border-radius: 5px;
+    padding: 15px 30px;
+}
+
+aside {
+    grid-row: 2 / 5;
+    grid-column: 1 / 2;
+    padding: 20px;
+}
+
+.new-book-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+section {
+    grid-column: 2 / 4;
+    grid-row: 2 / 5;
+}
+
+.info {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.info h3 {
+    font-size: 40px;
+}
+
+.info label {
+    font-size: 25px;
+}
+
+.info input {
+    height: 35px;
+    font-size: 20px;
+}
+
+.read-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.read-wrapper h4 {
+    font-size: 25px;
+    font-weight: 100;
+}
+
+.input-wrapper {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.input-wrapper input[type='checkbox'] {
+    width: 25px;
+}
+
+#book-submit {
+    height: 45px;
+    font-size: 20px;
+    background-color: transparent;
+    border: 1px solid;
+    border-radius: 5px;
+}
+
+.book {
+    width: 200px;
+    height: 250px;
+    background-color: antiquewhite;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    border: 1px solid;
+    border-left: 5px solid;
+}
+
+.book-mark {
+    width: 35px;
+    height: 50px;
+    background-color: red;
+    grid-column: 3 / 4;
+    justify-self: end;
+    border: 1px solid ;
+}
+
+.title-wrapper {
+    grid-column: 1 / 4;
+    grid-row: 2 / 3;
+    align-self: center;
+    justify-self: center;
+}
+
+.title {
+    font-size: 25px;
+}
+
+.author {
+    font-size: 15px;
+}
+
+.pages {
+    grid-column: 3/ 4;
+    grid-row: 3 / 4;
+    font-size: 20px;
+    align-self: end;
+    justify-self: end;
+    margin-right: 5px;
+}
+
+.library-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 15px;
+}
