--- a/styles.css
+++ b/styles.css
@@ -18,9 +18,9 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 0 15px;
     grid-column: 1 / 4;
     grid-row: 1 / 2;
+    padding: 0px 15px;
 }
 
 h1 {
@@ -114,10 +114,16 @@ section {
 .book-mark {
     width: 35px;
     height: 50px;
-    background-color: red;
     grid-column: 3 / 4;
     justify-self: end;
-    border: 1px solid ;
+    cursor: pointer;
+    background-color: rgba(255, 0, 0, 0.26);
+    border: 1px solid rgba(10, 10, 10, 0.235);
+}
+
+.book-read {
+    background-color: red;
+    border-color: black;
 }
 
 .title-wrapper {
@@ -148,4 +154,5 @@ section {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     gap: 15px;
+    padding: 15px;
 }
