--- a/styles.css
+++ b/styles.css
@@ -8,10 +8,12 @@
 
 .container {
     display: grid;
-    height: 100vh;
-    grid-template-columns: 1fr 2fr 1fr;
+    min-height: 100vh;
+    max-height: 100%;
+    grid-template-columns: 1fr 3fr 1fr;
     grid-template-rows: 1fr 7fr 1fr;
     gap: 15px;
+    background-color: #654321;
 }
 
 header {
@@ -21,24 +23,28 @@ header {
     grid-column: 1 / 4;
     grid-row: 1 / 2;
     padding: 0px 15px;
+    background-color: #123d12;
 }
 
 h1 {
     font-size: 60px;
+    color: #fffff0;
 }
 
 .pf-sign {
-    background-color: blanchedalmond;
+    background-color: #fffff0;
     border: 1px solid;
     font-size: 20px;
     border-radius: 5px;
     padding: 15px 30px;
+    cursor: pointer;
 }
 
 aside {
     grid-row: 2 / 5;
     grid-column: 1 / 2;
     padding: 20px;
+    background-color: #123d12;
 }
 
 .new-book-wrapper {
@@ -50,6 +56,7 @@ aside {
 section {
     grid-column: 2 / 4;
     grid-row: 2 / 5;
+    background-color: #3d121a;
 }
 
 .info {
@@ -60,15 +67,24 @@ section {
 
 .info h3 {
     font-size: 40px;
+    color: #fffff0;
 }
 
 .info label {
     font-size: 25px;
+    color: #fffff0;
 }
 
 .info input {
     height: 35px;
     font-size: 20px;
+    background-color: #fffff0;
+    padding: 0 5px;
+}
+
+.info input:focus {
+    border-color: #3d121a;
+    outline: 2px solid #98c1a6;
 }
 
 .read-wrapper {
@@ -80,6 +96,7 @@ section {
 .read-wrapper h4 {
     font-size: 25px;
     font-weight: 100;
+    color: #fffff0;
 }
 
 .input-wrapper {
@@ -90,25 +107,28 @@ section {
 
 .input-wrapper input[type='checkbox'] {
     width: 25px;
+    outline: none;
 }
 
 #book-submit {
     height: 45px;
     font-size: 20px;
-    background-color: transparent;
+    background-color: #fffff0;
     border: 1px solid;
     border-radius: 5px;
 }
 
 .book {
     width: 200px;
-    height: 250px;
-    background-color: antiquewhite;
+    height: 240px; 
+    margin-bottom: 15px;
+    background-color: #fffff0;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     border: 1px solid;
     border-left: 5px solid;
+    overflow: hidden;
 }
 
 .book-mark {
@@ -155,4 +175,7 @@ section {
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     gap: 15px;
     padding: 15px;
+    background-image: linear-gradient( to bottom,transparent 240px,  #654321 250px );
+    background-size: 100% 270px; 
+    background-repeat: repeat-y;
 }
