Made a toggle for the book mark and update the UI for the book mark
made the book mark on the books toggle so it can change from read to
not read

as well on the UI I add read and not read to each toggle to better
show what the book mark was intended for

--- a/styles.css
+++ b/styles.css
@@ -151,8 +151,6 @@ input[type='checkbox'] {
     scale: 1.1;
 }
 
-
-
 .book-mark {
     width: 35px;
     height: 50px;
@@ -194,10 +192,12 @@ input[type='checkbox'] {
 
 .title {
     font-size: 25px;
+    padding: 0 5px;
 }
 
 .author {
     font-size: 15px;
+    padding: 0 5px;
 }
 
 .pages {
